# freelegalhelponline

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  FUNCTIONALITY.md  KNOWLEDGE.md  PHASE_1G_VALIDATION.md  PHASE_1_COMPLETION.md  markdown-generation.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/product-manager/: SKILL.md
.claude/skills/software-architect/: SKILL.md
.claude/skills/ui-ux/: SKILL.md
.claude/skills/vc/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yml  refresh.yml
config/: posture.yaml  rag.yaml  scraper.yaml
config/objections/: grounds.yaml
config/prompts/: attorney_system.j2  consumer_system.j2  context.j2  objection_system.j2
config/sources/: bus_prof_code.yaml  caci.yaml  calhr.yaml  ccp.yaml  ccr_title2_feha.yaml  ccr_title_8.yaml  civil_code.yaml  courtlistener.yaml  crd.yaml  dir.yaml  dlse_manual.yaml  dlse_opinions.yaml  edd.yaml  education_code.yaml  eeoc.yaml  gov_code_feha.yaml  gov_code_whistleblower.yaml  health_safety_code.yaml  labor_code.yaml  legal_aid_at_work.yaml  unemp_ins_code.yaml
data/: employee_help.db
docs/: AUTHENTICATION_PLAN.md  CI_CD_IMPLEMENTATION.md  DISCOVERY_BANK_REDESIGN.md  DISCOVERY_TOOLS.md  GAP_ANALYSIS_AND_ROADMAP.md  LITIGAGENT.md
docs/requirements/: EXPANDED_REQUIREMENTS.md  OBJECTIONS.md  PHASE_1_KNOWLEDGE_ACQUISITION.md  PRODUCT_REQUIREMENTS_2.md
frontend/: README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  sentry.client.config.ts  sentry.server.config.ts
frontend/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
frontend/app/claims/: page.tsx
frontend/app/login/: page.tsx
frontend/app/privacy/: page.tsx
frontend/app/terms/: page.tsx
frontend/app/tools/: page.tsx
frontend/app/topics/: page.tsx
frontend/components/: agency-routing.tsx  answer-display.tsx  auth-guard.tsx  citation-badges.tsx  consent-modal.tsx  conversation-ended.tsx  conversation-turn.tsx  deadline-calculator.tsx  disclaimer.tsx  feedback-buttons.tsx  guided-intake.tsx  incident-docs.tsx  loading-bar.tsx  login-form.tsx  mode-toggle.tsx  question-input.tsx  question-panel.tsx  source-list.tsx  turn-progress.tsx  unpaid-wages-calculator.tsx  user-menu.tsx
frontend/components/discovery/: case-info-form.tsx  claim-selector.tsx  definition-editor.tsx  docx-wizard.tsx  download-button.tsx  frog-wizard.tsx  interrogatory-picker.tsx  objection-drafter.tsx  objection-parse-preview.tsx  objection-results.tsx  party-role-selector.tsx  preview-panel.tsx  request-builder.tsx  wizard-navigation.tsx  wizard-stepper.tsx
frontend/components/litigagent/: case-layout.tsx  case-list.tsx  file-panel.tsx  notes-panel.tsx  text-panel.tsx
frontend/e2e/: auth.spec.ts  discovery-cross-tool.spec.ts  discovery-defendant.spec.ts  discovery-disc001.spec.ts  discovery-disc002.spec.ts  discovery-index.spec.ts  discovery-limits.spec.ts  discovery-mobile.spec.ts  discovery-navigation.spec.ts  discovery-rfas.spec.ts  discovery-rfpds.spec.ts  discovery-srogs.spec.ts  litigagent-edit-text.spec.ts  litigagent-gate-l1.spec.ts  litigagent-text-panel.spec.ts  litigagent-upload.spec.ts  objection-drafter.spec.ts
frontend/e2e/helpers/: doc-validator.ts  wizard-helpers.ts
frontend/lib/: api.ts  auth-context.tsx  claims.ts  consent-context.tsx  discovery-api.ts  discovery-context.tsx  litigagent-api.ts  mode-context.tsx  objection-api.ts  objection-context.tsx  topics.ts  use-conversation.ts
frontend/lib/calculators/: agency-routing.ts  deadlines.ts  incident-docs.ts  intake.ts  unpaid-wages.ts
seed-files/: README.md  SEED-DATA-REVIEW.md
seed-files/agency-routing/: scenarios.md
seed-files/chatbot/: attorney-queries.md  consumer-queries.md
seed-files/deadline-calculator/: scenarios.md
seed-files/discovery/: case-defendant-side.md  case-feha-discrimination.md  case-harassment-retaliation.md  case-pro-per.md  case-wage-theft.md
seed-files/guided-intake/: scenarios.md
seed-files/incident-docs/: scenarios.md
seed-files/objections/: frogs_employment_set2.txt  frogs_general_set1.txt  rfas_discrimination_set1.txt  rfas_wrongful_termination_set2.txt  rfpds_harassment_set1.txt  rfpds_retaliation_set2.txt  srogs_wage_hour_set2.txt  srogs_wrongful_termination_set1.txt
seed-files/unpaid-wages-calculator/: scenarios.md
src/employee_help/: cli.py  config.py  pipeline.py  search.py  validation.py  validation_report.py
src/employee_help/api/: __init__.py  auth_routes.py  casefile_routes.py  (+8 more)
tests/: conftest.py  test_answer_models.py  test_answer_service.py  test_api.py  test_auth_middleware.py  test_auth_provider.py  test_auth_routes.py  test_auth_storage.py  test_caci_loader.py  test_case_law_chunker.py  test_case_models.py  test_case_storage.py  test_casefile_api.py  test_casefile_chunker.py  test_casefile_csv_extractor.py  test_casefile_docx_extractor.py  test_casefile_email_extractor.py  test_casefile_fixtures.py  test_casefile_image_extractor.py  test_casefile_pdf_extractor.py  test_casefile_text_extractor.py  test_casefile_xlsx_extractor.py  test_caselaw_pipeline.py  test_ccr.py  test_ccr_title8.py  test_chunker.py  test_citation_extractor.py  test_citation_links.py  test_citation_regression.py  test_citation_verifier.py  test_cleaner.py  test_cli.py  test_config.py  test_courtlistener.py  test_crawler.py  test_cross_source.py  test_cross_source_validation.py  test_deadlines.py  test_deadlines_api.py  test_discovery_api.py  (+57 more)
tests/evaluation/: __init__.py  adversarial_questions.yaml  attorney_conversations.yaml  attorney_questions.yaml  attorney_questions_comprehensive.yaml  attorney_validation.yaml  consumer_conversations.yaml  consumer_questions.yaml  consumer_validation.yaml  test_citation_integrity.py  test_retrieval_quality.py  validation_runner.py
(+152 files in other folders)
