[project]
name = "employee-help"
version = "0.1.0"
description = "AI-powered legal guidance assistant for California employment discrimination law"
readme = "docs/requirements/PHASE_1_KNOWLEDGE_ACQUISITION.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.49",
    "beautifulsoup4>=4.12",
    "pdfplumber>=0.11",
    "structlog>=24.0",
    "pyyaml>=6.0",
    "lxml>=5.0",
    "httpx>=0.28.1",
    "sentry-sdk[fastapi]>=2.0",
]

[project.optional-dependencies]
rag = [
    "sentence-transformers>=3.0,<3.5",
    "torch>=2.0,<=2.2.2",
    "transformers>=4.40,<4.50",
    "numpy<2.0",
    "lancedb>=0.6,<0.26",
    "anthropic>=0.40",
    "jinja2>=3.1",
    "eyecite>=2.7",
]
eval = [
    "ragas>=0.2",
    "deepeval>=1.0",
    "textstat>=0.7",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.9",
    "pypdf>=6.7,<7.0",
    "PyPDFForm>=4.7,<5.0",
    "docxtpl>=0.20,<1.0",
]
discovery = [
    "pypdf>=6.7,<7.0",
    "PyPDFForm>=4.7,<5.0",
    "docxtpl>=0.20,<1.0",
]
casefile = [
    "pytesseract>=0.3",
    "Pillow>=9.0",
]

[project.scripts]
employee-help = "employee_help.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
    "-m", "not (slow or live or llm or evaluation or validation or spot_check)",
]
markers = [
    "integration: marks tests that hit live external services (deselect with '-m \"not integration\"')",
    "live: marks tests that hit live government websites (deselect with '-m \"not live\"')",
    "slow: marks tests that require loading ML models (deselect with '-m \"not slow\"')",
    "llm: marks tests that require a live LLM API key (deselect with '-m \"not llm\"')",
    "evaluation: marks RAG evaluation tests (deselect with '-m \"not evaluation\"')",
    "validation: marks live API validation tests (deselect with '-m \"not validation\"')",
    "spot_check: marks tests that require the live ingested database (deselect with '-m \"not spot_check\"')",
]

[tool.coverage.run]
source = ["src/employee_help"]
omit = ["*/cli.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/employee_help"]
